// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrowdingDiagram renders correctly for a crowded bus 1`] = `
<div
  className="m-crowding-diagram"
>
  <div
    className="m-crowding-diagram__properties"
  >
    <label
      className="m-properties-list__property-label"
      htmlFor="riders-onboard-:r5:"
    >
      Riders onboard
    </label>
    <div
      className="mock-tippy"
      onClick={[Function]}
    >
      <div
        className="mock-tippy-content"
      >
        <div>
          Riders are estimated using
          <br />
          Automated Passenger Counters (APCs).
        </div>
      </div>
      <button
        id="riders-onboard-:r5:"
      >
        <span
          aria-hidden={true}
          aria-label=""
          className="m-crowding-diagram__tooltip-anchor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="presentation img"
        />
      </button>
    </div>
    <br />
    45 riders
     / 
    30
     seats
    <br />
    <span
      className="m-crowding-diagram__status-description m-crowding-diagram__status-description--crowded"
    >
      Crowded
    </span>
  </div>
  <div
    className="m-crowding-diagram__crowding-icon-wrapper"
  >
    <span
      className="m-crowding-diagram__crowding-icon m-crowding-diagram__crowding-icon--crowded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg/>",
        }
      }
    />
  </div>
</div>
`;

exports[`CrowdingDiagram renders correctly for a somewhat crowded bus 1`] = `
<div
  className="m-crowding-diagram"
>
  <div
    className="m-crowding-diagram__properties"
  >
    <label
      className="m-properties-list__property-label"
      htmlFor="riders-onboard-:r4:"
    >
      Riders onboard
    </label>
    <div
      className="mock-tippy"
      onClick={[Function]}
    >
      <div
        className="mock-tippy-content"
      >
        <div>
          Riders are estimated using
          <br />
          Automated Passenger Counters (APCs).
        </div>
      </div>
      <button
        id="riders-onboard-:r4:"
      >
        <span
          aria-hidden={true}
          aria-label=""
          className="m-crowding-diagram__tooltip-anchor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="presentation img"
        />
      </button>
    </div>
    <br />
    10 riders
     / 
    20
     seats
    <br />
    <span
      className="m-crowding-diagram__status-description m-crowding-diagram__status-description--some-crowding"
    >
      Some crowding
    </span>
  </div>
  <div
    className="m-crowding-diagram__crowding-icon-wrapper"
  >
    <span
      className="m-crowding-diagram__crowding-icon m-crowding-diagram__crowding-icon--some-crowding"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg/>",
        }
      }
    />
  </div>
</div>
`;

exports[`CrowdingDiagram renders correctly for an empty bus 1`] = `
<div
  className="m-crowding-diagram"
>
  <div
    className="m-crowding-diagram__properties"
  >
    <label
      className="m-properties-list__property-label"
      htmlFor="riders-onboard-:r2:"
    >
      Riders onboard
    </label>
    <div
      className="mock-tippy"
      onClick={[Function]}
    >
      <div
        className="mock-tippy-content"
      >
        <div>
          Riders are estimated using
          <br />
          Automated Passenger Counters (APCs).
        </div>
      </div>
      <button
        id="riders-onboard-:r2:"
      >
        <span
          aria-hidden={true}
          aria-label=""
          className="m-crowding-diagram__tooltip-anchor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="presentation img"
        />
      </button>
    </div>
    <br />
    0 riders
     / 
    18
     seats
    <br />
    <span
      className="m-crowding-diagram__status-description m-crowding-diagram__status-description--empty"
    >
      Empty
    </span>
  </div>
  <div
    className="m-crowding-diagram__crowding-icon-wrapper"
  >
    <span
      className="m-crowding-diagram__crowding-icon m-crowding-diagram__crowding-icon--empty"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg/>",
        }
      }
    />
  </div>
</div>
`;

exports[`CrowdingDiagram renders correctly for an uncrowded bus 1`] = `
<div
  className="m-crowding-diagram"
>
  <div
    className="m-crowding-diagram__properties"
  >
    <label
      className="m-properties-list__property-label"
      htmlFor="riders-onboard-:r3:"
    >
      Riders onboard
    </label>
    <div
      className="mock-tippy"
      onClick={[Function]}
    >
      <div
        className="mock-tippy-content"
      >
        <div>
          Riders are estimated using
          <br />
          Automated Passenger Counters (APCs).
        </div>
      </div>
      <button
        id="riders-onboard-:r3:"
      >
        <span
          aria-hidden={true}
          aria-label=""
          className="m-crowding-diagram__tooltip-anchor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="presentation img"
        />
      </button>
    </div>
    <br />
    1 rider
     / 
    20
     seats
    <br />
    <span
      className="m-crowding-diagram__status-description m-crowding-diagram__status-description--not-crowded"
    >
      Not crowded
    </span>
  </div>
  <div
    className="m-crowding-diagram__crowding-icon-wrapper"
  >
    <span
      className="m-crowding-diagram__crowding-icon m-crowding-diagram__crowding-icon--not-crowded"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg/>",
        }
      }
    />
  </div>
</div>
`;

exports[`CrowdingDiagram renders correctly for an untrusted APC 1`] = `
<div
  className="m-crowding-diagram"
>
  <div
    className="m-crowding-diagram__properties"
  >
    <label
      className="m-properties-list__property-label"
      htmlFor="riders-onboard-:r1:"
    >
      Riders onboard
    </label>
    <div
      className="mock-tippy"
      onClick={[Function]}
    >
      <div
        className="mock-tippy-content"
      >
        <div>
          Riders are estimated using
          <br />
          Automated Passenger Counters (APCs).
        </div>
      </div>
      <button
        id="riders-onboard-:r1:"
      >
        <span
          aria-hidden={true}
          aria-label=""
          className="m-crowding-diagram__tooltip-anchor"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="presentation img"
        />
      </button>
    </div>
    <br />
    No data available
  </div>
  <div
    className="m-crowding-diagram__crowding-icon-wrapper"
  >
    <span
      className="m-crowding-diagram__crowding-icon m-crowding-diagram__crowding-icon--no-data"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg/>",
        }
      }
    />
  </div>
</div>
`;

exports[`CrowdingDiagram renders nothing if route isn't considered reliable 1`] = `null`;
